ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: friendbook.com
      http:
        paths:
          - path: /usr
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 4000
          - path: /msg
            pathType: Prefix
            backend:
              service:
                name: message-srv
                port:
                  number: 8081
          - path: /friends
            pathType: Prefix
            backend:
              service:
                name: friend-srv
                port:
                  number: 8082
